--- a/Vereinsstatuten.tex
+++ b/Vereinsstatuten.tex
@@ -26,7 +26,7 @@
 
 \vspace{100ex}
 
-\textbf{Fassung gemäß Beschluss der Generalversammlung vom 19.01.2020}
+\textbf{Fassung gemäß Beschluss der Generalversammlung vom XX.XX.2022}
 
 \clearpage
 \flushleft
@@ -168,8 +168,6 @@ Die Mitglieder des Vereins gliedern sich in:
 
 \begin{itemize}
 \item
-Kernmitglieder
-\item
 Ordentliche Mitglieder
 \item
 Fördernde Mitglieder
@@ -184,23 +182,6 @@ Ehrenobmänner bzw. Ehrenpräsidenten
 \end{itemize}
 
 (2)
-Kernmitglieder
-
-Kernmitglieder sind jene Mitglieder, die vom Vorstand aufgrund einer Beitrittserklärung als solche aufgenommen werden und sich durch Ausübung ihres Stimmrechtes in der Generalversammlung aktiv am Vereinsleben im Rahmen der Vereinsstatuten beteiligen.
-Über die Aufnahme als Kernmitglied entscheidet der Vorstand endgültig.
-Die Aufnahme kann ohne Angabe von Gründen verweigert werden.
-
-Kernmitglieder unterscheiden sich von ordentlichen Mitgliedern dadurch, dass diese über individuelle Vereinbarung mit dem Vorstand einen jährlichen Mitgliedsbeitrag entrichten, der ein Vielfaches des Mitgliedsbeitrages von ordentlichen Mitgliedern beträgt.
-Zu Beginn einer Generalversammlung (jedenfalls vor der ersten Abstimmung) sind die anwesenden Mitglieder auch über die Anzahl der Stimmen zu informieren, die einem Kernmitglied zukommen.
-Kernmitglieder haben den vereinbarten, jährlichen Mitgliedsbeitrag bis spätestens 30. Juni jeden Jahres zu bezahlen.
-Der bei Eintritt in den Verein mit dem Vorstand vereinbarte jährliche Mitgliedsbeitrag kann nur von der Generalversammlung mit einer qualifizierten Mehrheit gem. § 17 Abs 1 herabgesetzt werden.
-Eine Erhöhung des jährlichen Mitgliedsbeitrages kann jederzeit über Antrag eines Kernmitglieds vom Vorstand beschlossen werden.
-
-Der Vorstand hat dabei darauf zu achten, dass der mit dem Kernmitglied vereinbarte Mitgliedsbeitrag durch die Höhe des einfachen Mitgliedsbeitrages, der von den ordentlichen Mitgliedern entrichtet wird, teilbar ist.
-Die Stimmanteile der Kernmitglieder bei Vorstandswahlen und Beschlussfassungen in Generalversammlungen – mit Ausnahme der in § 18 ausdrücklich geregelten Sonderfälle – richten sich nach der Höhe des Mitgliedsbeitrages.
-Kernmitgliedern kommen demnach so viele Stimmen zu, wie der ordentliche Mitgliedsbeitrag in ihrem individuell mit dem Vorstand vereinbarten Mitgliedsbeitrag enthalten ist.
-
-(3)
 Ordentliche Mitglieder
 
 Ordentliche Mitglieder sind jene Mitglieder, die vom Vorstand aufgrund einer Beitrittserklärung als solche aufgenommen werden und sich durch Ausübung ihres Stimmrechtes in der Generalversammlung aktiv am Vereinsleben im Rahmen der Vereinsstatuten beteiligen ("`Wackere Mitgliedschaft"').
@@ -214,14 +195,14 @@ Das Erfordernis der ununterbrochenen, zweijährigen Mitgliedschaft ist auch dann
 Ordentliche Mitglieder, die dem Verein bereits vor dem 19.01.2020 beigetreten sind, müssen mindestens 1 (ein) Jahr ununterbrochen Mitglied sein, damit sie bei Vorstandswahlen und Beschlussfassungen in Generalversammlungen über eine (1) Stimme verfügen.
 Das Erfordernis der ununterbrochenen, einjährigen Mitgliedschaft ist auch dann erfüllt, wenn diese entweder zur Gänze oder in Teilen fördernder Natur gewesen ist.
 
-(4)
+(3)
 Fördernde Mitglieder
 
 Fördernde Mitglieder sind jene Mitglieder, die vom Vorstand aufgrund einer Beitrittserklärung als solche aufgenommen werden und das Vereinsleben zwar nicht aktiv mitgestalten, aber die Zwecke des Vereins durch Zahlung eines jährlichen Mitgliedsbeitrages, dessen Höhe durch einen Beschluss der Generalversammlung festgelegt wird, oder durch sonstige Zuwendungen jeglicher Art fördern.
 
 Fördernde Mitglieder verfügen über kein Stimmrecht bei Vorstandswahlen und Beschlussfassungen in Generalversammlungen.
 
-(5)
+(4)
 Kindermitglieder
 
 Kindermitglieder sind natürliche Personen ab Vollendung des 6. Lebensjahres (7. Geburtstag) bis zur Vollendung des 14. Lebensjahres (15. Geburtstag), die vom Vorstand aufgrund einer Beitrittserklärung als solche aufgenommen werden ("`Wacker Ma(n)dl"').
@@ -230,7 +211,7 @@ Kinder unter 7 Jahren können aus gesetzlichen Gründen nicht Mitglied eines Ver
 Die Beitrittserklärung hat durch den jeweiligen gesetzlichen Vertreter im Namen des Kindes zu erfolgen.
 Die Höhe des jährlichen Mitgliedsbeitrages wird durch einen Beschluss der Generalversammlung festgelegt.
 
-(6)
+(5)
 Familienmitglieder
 
 Familienmitglieder sind natürliche Personen, die im Paket 2 ordentliche Mitgliedschaften und bis zu 4 Kindermitgliedschaften mit allen damit verbundenen Rechten und Pflichten zu einem ermäßigten, jährlichen Mitgliedsbeitrag erwerben, dessen Höhe durch einen Beschluss der Generalversammlung festgelegt wird.
@@ -238,7 +219,7 @@ Familienmitglieder sind natürliche Personen, die im Paket 2 ordentliche Mitglie
 Die Beitrittserklärung hat die Namen sämtlicher Personen zu enthalten, die von der Familienmitgliedschaft erfasst sind.
 Über den Beitritt entscheidet der Vorstand.
 
-(7)
+(6)
 Ehrenmitglieder
 
 Ehrenmitglieder sind natürliche Personen, die wegen besonderer Verdienste um den Verein über Vorschlag des Vorstands durch Beschluss der Generalversammlung zu solchen ernannt werden.
@@ -246,7 +227,7 @@ Ehrenmitglieder sind von der Bezahlung eines Mitgliedsbeitrages befreit.
 
 Ehrenmitglieder verfügen bei Vorstandswahlen und Beschlussfassungen in Generalversammlungen über eine (1) Stimme.
 
-(8)
+(7)
 Ehrenobmänner bzw. Ehrenpräsidenten
 
 Ehrenobmänner bzw. Ehrenpräsidenten sind natürliche Personen, die wegen besonderer Verdienste in ihrer Funktion als Obmann bzw. Präsident des Vereins am Ende ihrer Funktionsperiode über Vorschlag des Vorstands durch Beschluss der Generalversammlung zu solchen ernannt werden.
@@ -258,7 +239,7 @@ Ehrenobmänner bzw. Ehrenpräsidenten verfügen bei Vorstandswahlen und Beschlus
 Erwerb der Mitgliedschaft}
 
 (1)
-Mitglieder des Vereins können sowohl natürliche Personen als auch juristische Personen werden, wobei juristische Personen nur die Kernmitgliedschaft, die ordentliche Mitgliedschaft oder die fördernde Mitgliedschaft erwerben können.
+Mitglieder des Vereins können nur natürliche Personen werden.
 
 (2)
 Über die Aufnahme von Mitgliedern entscheidet der Vorstand aufgrund einer Beitrittserklärung mit einfacher Mehrheit, wobei zur Rechtswirksamkeit jedenfalls die Zustimmung des Präsidenten erforderlich ist.
@@ -267,7 +248,7 @@ Ein Beitritt wird wirksam, wenn er nicht binnen 3 Monaten nach Einlangen der Bei
 (3)
 Die Ablehnung einer Aufnahme ist vom Vorstand zu begründen.
 Gegen die Ablehnung steht dem Betroffenen das Recht zu, längstens binnen 14 (vierzehn) Tagen einen Einspruch an die Generalversammlung zu erstatten.
-In einem solchen Fall entscheiden die Mitglieder der Generalversammlung in der nächsten ordentlichen Generalversammlung mit einfacher Mehrheit über die Aufnahme des Betroffenen als Mitglied, wobei für diesen Beschluss die Ausnahmebestimmung des § 18 Anwendung findet.
+In einem solchen Fall entscheiden die Mitglieder der Generalversammlung in der nächsten ordentlichen Generalversammlung mit einfacher Mehrheit über die Aufnahme des Betroffenen als Mitglied.
 Ein Beschluss der Generalversammlung über die Ablehnung ist nicht anfechtbar.
 
 (4)
@@ -280,33 +261,30 @@ Rechte der Mitglieder}
 Alle Mitglieder sind berechtigt, im Rahmen der Statuten am Vereinsleben teilzunehmen und die Einrichtungen des Vereins im vom Vorstand gestatteten Ausmaß zu beanspruchen.
 
 (2)
-Nur Kernmitglieder, ordentliche Mitglieder, Ehrenmitglieder und Ehrenobmänner bzw. Ehrenpräsidenten, die bereits volljährig sind, haben das aktive und passive Wahlrecht sowie das Stimmrecht in der Generalversammlung.
+Nur ordentliche Mitglieder, Ehrenmitglieder und Ehrenobmänner bzw. Ehrenpräsidenten, die bereits volljährig sind, haben das aktive und passive Wahlrecht sowie das Stimmrecht in der Generalversammlung.
 Fördernden Mitgliedern kommt weder ein aktives noch ein passives Wahlrecht und auch kein Stimmrecht in der Generalversammlung zu.
 
 (3)
-Juristische Personen können ihre Rechte als Mitglieder nur durch vertretungsbefugte oder schriftlich bevollmächtigte, natürliche Personen ausüben.
-
-(4)
 Bei ordentlichen Mitgliedern, die ihre Mitgliedschaft nach dem 19.01.2020 erwerben, muss die Mitgliedschaft für den Erwerb des aktiven Wahlrechts (nicht des passiven Wahlrechts) sowie des Stimmrechtes in der Generalversammlung zudem seit mindestens zwei (2) Jahren ununterbrochen bestehen.
 Dieses Erfordernis der ununterbrochenen zweijährigen Mitgliedschaft ist auch dann erfüllt, wenn diese entweder zur Gänze oder in Teilen fördernder Natur gewesen ist.
 
 Bei ordentlichen Mitgliedern, die ihre Mitgliedschaft bereits vor dem 19.01.2020 erworben haben, muss die Mitgliedschaft für den Erwerb des aktiven Wahlrechts (nicht des passiven Wahlrechts) sowie des Stimmrechtes in der Generalversammlung zudem seit mindestens einem (1) Jahr ununterbrochen bestehen.
 Dieses Erfordernis der ununterbrochenen einjährigen Mitgliedschaft ist auch dann erfüllt, wenn diese entweder zur Gänze oder in Teilen fördernder Natur gewesen ist.
 
-(5)
+(4)
 Das aktive und passive Wahlrecht ruht für jene Mitglieder, die als Spieler für den Verein registriert sind.
 
-(6)
+(5)
 Jedes Mitglied ist berechtigt, vom Vorstand die Ausfolgung der Statuten zu verlangen.
 
+(6)
+Mindestens ein Zehntel der Mitglieder kann vom Vorstand die Einberufung einer Generalversammlung verlangen.
+
 (7)
-Mindestens ein Zehntel der Mitglieder (Kopfmehrheit) kann vom Vorstand die Einberufung einer Generalversammlung verlangen.
+Die Mitglieder sind in jeder ordentlichen Generalversammlung vom Vorstand über die Tätigkeit und finanzielle Gebarung des Vereins zu informieren.
+Wenn mindestens ein Zehntel der Mitglieder dies unter Angabe von Gründen verlangt, hat der Vorstand den betreffenden Mitgliedern eine solche Information auch sonst binnen 4 (vier) Wochen zu geben.
 
 (8)
-Die Mitglieder sind in jeder ordentlichen Generalversammlung vom Vorstand über die Tätigkeit und finanzielle Gebarung des Vereins zu informieren.
-Wenn mindestens ein Zehntel der Mitglieder (Kopfmehrheit) dies unter Angabe von Gründen verlangt, hat der Vorstand den betreffenden Mitgliedern eine solche Information auch sonst binnen 4 (vier) Wochen zu geben.
-
-(9)
 Die Mitglieder sind vom Vorstand über den geprüften Rechnungsabschluss (Rechnungslegung) zu informieren.
 Geschieht dies in der Generalversammlung sind die Rechnungsprüfer einzubinden.
 
@@ -327,12 +305,12 @@ Die jährlichen Mitgliedsbeiträge sind jeweils im Vorhinein bis spätestens 30.
 Beendigung der Mitgliedschaft}
 
 (1)
-Die Mitgliedschaft erlischt durch Tod (bei juristischen Personen durch Verlust der Rechtspersönlichkeit), freiwilligen Austritt, Streichung, Ausschluss, Aberkennung oder Auflösung des Vereins.
+Die Mitgliedschaft erlischt durch Tod, freiwilligen Austritt, Streichung, Ausschluss, Aberkennung oder Auflösung des Vereins.
 
 (2)
 Tod
 
-Nachdem eine Mitgliedschaft beim Verein höchstpersönlich ist, erlischt diese bei natürlichen Personen durch Tod und bei juristischen Personen durch den Verlust der Rechtspersönlichkeit.
+Nachdem eine Mitgliedschaft beim Verein höchstpersönlich ist, erlischt diese bei natürlichen Personen durch Tod.
 
 (3)
 Freiwilliger Austritt
@@ -340,18 +318,13 @@ Freiwilliger Austritt
 Der freiwillige Austritt von ordentlichen Mitgliedern, fördernden Mitgliedern, Kinderund Familienmitgliedern kann nur zum 30. Juni jeden Jahres erfolgen, wobei dem Vorstand des Vereins bis längstens 1. Juni desselben Jahres eine schriftliche Austrittserklärung zugegangen sein muss.
 Der Austritt entbindet nicht von der Erfüllung der bis zum Austrittszeitpunkt entstandenen Verbindlichkeiten gegenüber dem Verein.
 
-Der freiwillige Austritt von Kernmitgliedern kann ebenfalls nur zum 30. Juni jeden Jahres erfolgen, wobei die schriftliche Austrittserklärung dem Vorstand des Vereins bis spätestens 31. Dezember des Vorjahres zugegangen sein muss.
-Der Austritt entbindet nicht von der Erfüllung der bis zum Austrittszeitpunkt entstandenen Verbindlichkeiten gegenüber dem Verein.
-
 (4)
 Streichung
 
 Die Streichung von ordentlichen Mitgliedern, fördernden Mitgliedern, Kinder- und Familienmitgliedern kann der Vorstand dann vornehmen, wenn dieses den Mitgliedsbeitrag trotz Mahnung nicht bis spätestens 01.12. des laufenden Geschäftsjahres einbezahlt hat.
 
-Die Streichung von Kernmitgliedern muss der Vorstand dann vornehmen, wenn dieses den vereinbarten, jährlichen Mitgliedsbeitrag nicht bis spätestens 31.07. des laufenden Geschäftsjahres einbezahlt hat.
-
 Gegen diese Streichung steht dem betroffenen Mitglied innerhalb einer Frist von längstens 14 (vierzehn) Tagen nach dessen Bekanntgabe das Recht des schriftlichen Einspruchs an den Vorstand zu.
-Im Falle eines Einspruchs gegen die Streichung hat der Vorstand das Schiedsgericht nach § 24 einzuberufen, bis zu dessen Entscheidung die Mitgliedsrechte ruhen.
+Im Falle eines Einspruchs gegen die Streichung hat der Vorstand das Schiedsgericht nach § 22 einzuberufen, bis zu dessen Entscheidung die Mitgliedsrechte ruhen.
 Gegen die Entscheidung des Schiedsgerichts ist kein Rechtsmittel möglich.
 
 Die Streichung entbindet nicht von der Erfüllung der bis zum Streichungszeitpunkt entstandenen Verbindlichkeiten gegenüber dem Verein.
@@ -364,7 +337,7 @@ Ein Ausschluss kann auch im Falle der Nichtunterwerfung unter das Schiedsgericht
 Sofern ein Mitglied des Vorstands ausgeschlossen werden soll, kommt diesem Mitglied bei der Beschlussfassung kein Stimmrecht zu.
 
 Gegen den Ausschluss steht dem betroffenen Mitglied innerhalb einer Frist von längstens 14 (vierzehn) Tagen nach dessen Bekanntgabe das Recht des schriftlichen Einspruchs an den Vorstand zu.
-Im Falle eines Einspruchs gegen den Ausschluss hat der Vorstand das Schiedsgericht nach § 24 einzuberufen, bis zu dessen Entscheidung die Mitgliedsrechte ruhen.
+Im Falle eines Einspruchs gegen den Ausschluss hat der Vorstand das Schiedsgericht nach § 22 einzuberufen, bis zu dessen Entscheidung die Mitgliedsrechte ruhen.
 Gegen die Entscheidung des Schiedsgerichts ist kein Rechtsmittel möglich.
 
 Der Ausschluss entbindet nicht von der Erfüllung der bis zum Ausschlusszeitpunkt entstandenen Verbindlichkeiten gegenüber dem Verein.
@@ -372,7 +345,7 @@ Der Ausschluss entbindet nicht von der Erfüllung der bis zum Ausschlusszeitpunk
 (6)
 Aberkennung
 
-Die Aberkennung der Ehrenmitgliedschaft bzw. des Titels als Ehrenobmann bzw. Ehrenpräsident kann aus den in Abs 5 genannten Gründen von der Generalversammlung über Antrag des Vorstands beschlossen werden.
+Die Aberkennung der Ehrenmitgliedschaft bzw. des Titels als Ehrenobmann bzw. Ehrenpräsident kann aus den in Abs. 5 genannten Gründen von der Generalversammlung über Antrag des Vorstands beschlossen werden.
 
 (7)
 Auflösung des Vereins
@@ -407,7 +380,7 @@ die Rechnungsprüfer bzw. Abschlussprüfer
 Jedes Organ handelt nach Maßgabe der ihm in diesen Statuten zugewiesenen Zuständigkeiten und Wirkungsweisen sowie der geltenden Gesetze.
 
 (3)
-In die in Abs 1 lit a - d genannten Vereinsorgane können nur Mitglieder gewählt oder berufen werden.
+In die in Abs. 1 lit a - d genannten Vereinsorgane können nur Mitglieder gewählt oder berufen werden.
 Wiederwahl oder wiederholte Berufung sind zulässig.
 
 (4)
@@ -432,7 +405,7 @@ Beschluss des Vorstands oder der ordentlichen Generalversammlung,
 \item
 Verlangen der Rechnungsprüfer bzw. des Abschlussprüfers, oder
 \item
-Verlangen von mindestens einem Zehntel der Mitglieder (Kopfmehrheit)
+Verlangen von mindestens einem Zehntel der Mitglieder
 \end{enumerate}
 
 einzuberufen.
@@ -441,7 +414,7 @@ Die Antragspunkte müssen der Beschlussfassung der Generalversammlung unterliege
 Ein Antrag ohne Angabe von Gründen ist nichtig.
 
 (4)
-Daneben ist eine außerordentliche Generalversammlung in den Fällen der §§ 19 Abs 5 erster Satz, 22 Abs 3 lit d von den Rechnungsprüfern bzw. dem Abschlussprüfer und im Falle des § 19 Abs 5 zweiter Satz vom gerichtlich bestellten Kurator einzuberufen.
+Daneben ist eine außerordentliche Generalversammlung in den Fällen der §§ 17 Abs. 5 erster Satz, 22 Abs. 3 lit d von den Rechnungsprüfern bzw. dem Abschlussprüfer und im Falle des § 17 Abs. 5 zweiter Satz vom gerichtlich bestellten Kurator einzuberufen.
 
 (5)
 Die außerordentliche Generalversammlung hat längstens binnen 6 (sechs) Wochen ab dem Zeitpunkt des Beschlusses bzw. des Einlangens des Verlangens beim Vorstand stattzufinden.
@@ -459,8 +432,7 @@ Verstreicht trotz ordnungsgemäßem Verlangen auf Einberufung einer außerordent
 
 (8)
 Jedes Mitglied hat die Möglichkeit, beim Vorstand bis längstens 14 (vierzehn) Tage vor dem Termin der Generalversammlung schriftlich (E-Mail, Telefax oder Post) Anträge einzubringen.
-Später eingebrachte Anträge können nur dann in die Tagesordnung aufgenommen werden, wenn sie dem Vorstand vor Beginn der Generalversammlung schriftlich vorliegen und dem Antrag durch Beschluss des Vorstands oder mit einer qualifizierten Mehrheit von drei Vierteln der anwesenden, stimmberechtigten Mitglieder die Dringlichkeit zuerkannt wird.
-Für einen derartigen Beschluss findet allerdings die Ausnahmebestimmung des § 18 Anwendung.
+Später eingebrachte Anträge können nur dann in die Tagesordnung aufgenommen werden, wenn sie dem Vorstand vor Beginn der Generalversammlung schriftlich vorliegen und dem Antrag durch Beschluss des Vorstands oder mit einer qualifizierten Mehrheit die Dringlichkeit zuerkannt wird.
 
 (9)
 Die Mitglieder müssen spätestens 10 (zehn) Tage vor der Generalversammlung durch Veröffentlichung auf der offiziellen Homepage des Vereins über die Tagesordnungspunkte informiert werden.
@@ -469,7 +441,7 @@ Die Mitglieder müssen spätestens 10 (zehn) Tage vor der Generalversammlung dur
 Anträge auf Statutenänderung müssen mit dem Wortlaut der vorgeschlagenen Änderung mit der Tagesordnung bekannt gegeben werden.
 
 (11)
-Bei der Generalversammlung sind nur Mitglieder, schriftlich bevollmächtige natürliche Personen i.S.d. § 15 Abs 7 und vom Vorstand geladene Gäste teilnahmeberechtigt.
+Bei der Generalversammlung sind nur Mitglieder und vom Vorstand geladene Gäste teilnahmeberechtigt.
 
 (12)
 Den Vorsitz in der Generalversammlung führt der Präsident, in dessen Verhinderung der Vizepräsident.
@@ -485,33 +457,31 @@ Der Generalversammlung als oberstem Vereinsorgan sind folgende Aufgaben vorbehal
 
 \begin{enumerate}[label=\alph*)]
 \item
-Wahl der Mitglieder des Vorstands und der Rechnungs- bzw. des Abschlussprüfers [einfache Mehrheit mit Stimmgewichtung];
+Wahl der Mitglieder des Vorstands und der Rechnungs- bzw. des Abschlussprüfers;
 \item
-Enthebung des gesamten Vorstands, einzelner Vorstandsmitglieder sowie der Rechnungs- bzw. des Abschlussprüfers [qualifizierte Doppelmehrheit von drei Vierteln];
+Enthebung des gesamten Vorstands, einzelner Vorstandsmitglieder sowie der Rechnungs- bzw. des Abschlussprüfers [qualifizierte Mehrheit];
 \item
-einmalige Verlängerung der Funktionsperiode des Vorstands bis 2 (zwei) Monate nach Abschluss des laufenden Geschäftsjahres gem. § 19 Abs 7 [einfache Mehrheit mit Stimmgewichtung];
+einmalige Verlängerung der Funktionsperiode des Vorstands bis 2 (zwei) Monate nach Abschluss des laufenden Geschäftsjahres gem. § 17 Abs. 7;
 \item
-Genehmigung der Kooptierung von Vorstandsmitgliedern [einfache Mehrheit mit Stimmgewichtung]
+Genehmigung der Kooptierung von Vorstandsmitgliedern;
 \item
-Genehmigung von Rechtsgeschäften zwischen Rechnungs- bzw. Abschlussprüfern und Verein [einfache Doppelmehrheit];
+Genehmigung von Rechtsgeschäften zwischen Rechnungs- bzw. Abschlussprüfern und Verein;
 \item
-Entlastung des Vorstands [einfache Doppelmehrheit];
+Entlastung des Vorstands;
 \item
-Festsetzung der Höhe der Mitgliedsbeiträge für ordentliche Mitglieder, fördernde Mitglieder, Kindermitglieder und Familienmitglieder [einfache Doppelmehrheit];
+Festsetzung der Höhe der Mitgliedsbeiträge für ordentliche Mitglieder, fördernde Mitglieder, Kindermitglieder und Familienmitglieder;
 \item
-Beschlussfassung über die Herabsetzung des vereinbarten jährlichen Mitgliedsbeitrages von Kernmitgliedern [qualifizierte Doppelmehrheit von drei Vierteln];
+Beschlussfassung über Einsprüche gegen die Ablehnung der Mitgliedschaft;
 \item
-Beschlussfassung über Einsprüche gegen die Ablehnung der Mitgliedschaft [einfache Mehrheit ohne Stimmgewichtung];
+Beschlussfassung über Statutenänderungen und die freiwillige Auflösung des Vereins [qualifizierte Mehrheit];
 \item
-Beschlussfassung über Statutenänderungen und die freiwillige Auflösung des Vereins [qualifizierte Doppelmehrheit von drei Vierteln];
+Verleihung und Aberkennung der Ehrenmitgliedschaft sowie des Titels eines Ehrenobmanns bzw. Ehrenpräsidenten;
 \item
-Verleihung und Aberkennung der Ehrenmitgliedschaft sowie des Titels eines Ehrenobmanns bzw. Ehrenpräsidenten [einfache Mehrheit ohne Stimmgewichtung];
+Beschlussfassung über Anträge auf geheime Abstimmung
 \item
-Beschlussfassung über Anträge auf geheime Abstimmung [einfache Mehrheit ohne Stimmgewichtung]
+Beschluss über die Aufnahme eines Antrags in die Tagesordnung einer Generalversammlung gem. § 13 Abs. 8 zweiter Satz [qualifizierte Mehrheit]
 \item
-Beschluss über die Aufnahme eines Antrags in die Tagesordnung einer Generalversammlung gem. § 13 Abs 8 zweiter Satz [qualifizierte Mehrheit von drei Vierteln ohne Stimmgewichtung]
-\item
-Beschlussfassung über sonstige von der Tagesordnung umfasste Anträge [einfache Doppelmehrheit];
+Beschlussfassung über sonstige von der Tagesordnung umfasste Anträge;
 \end{enumerate}
 
 \subsection{§ 15
@@ -521,54 +491,28 @@ Beschlüsse}
 Die Generalversammlung ist unabhängig von der Anzahl der bei ihrem Beginn anwesenden Mitglieder beschlussfähig.
 
 (2)
-Die Generalversammlung fasst ihre Beschlüsse grundsätzlich mit einfacher Mehrheit der abgegebenen, gültigen Stimmen, sofern diese Statuten nicht ausdrücklich eine doppelte Mehrheit i.S.d. § 16 oder qualifizierte Mehrheiten i.S.d. § 17 vorsehen.
+Die Generalversammlung fasst ihre Beschlüsse grundsätzlich mit einfacher Mehrheit der abgegebenen, gültigen Stimmen, sofern diese Statuten nicht ausdrücklich eine qualifizierte Mehrheit i.S.d. § 16 vorsehen.
 Bei Stimmengleichheit gilt der Antrag als abgelehnt.
 
 (3)
 Die Abstimmung in der Generalversammlung erfolgt grundsätzlich offen mit Handzeichen.
-Wird ein Antrag auf geheime Abstimmung eingebracht, so entscheidet die Generalversammlung in offener Abstimmung mit einfacher Mehrheit der abgegebenen, gültigen Stimmen über diesen Antrag, wobei für diesen Beschluss die Ausnahmebestimmung des § 18 Anwendung findet.
-Über Beschlüsse gemäß § 17 Abs 1 ist jedenfalls geheim abzustimmen.
+Wird ein Antrag auf geheime Abstimmung eingebracht, so entscheidet die Generalversammlung in offener Abstimmung mit einfacher Mehrheit der abgegebenen, gültigen Stimmen über diesen Antrag.
+Über Beschlüsse gemäß § 16 ist jedenfalls geheim abzustimmen.
 
 (4)
 Gültige Beschlüsse können nur zur Tagesordnung gefasst werden.
 Davon ausgenommen ist lediglich ein Beschluss auf Einberufung einer außerordentlichen Generalversammlung, weil ein derartiger Antrag auch in der ordentlichen Generalversammlung gestellt werden kann.
 
 (5)
-In der Generalversammlung sind nur Kernmitglieder, ordentliche Mitglieder (nach der Maßgabe in § 7 Abs 3), Ehrenmitglieder und Ehrenobmänner bzw. Ehrenpräsidenten, die bereits volljährig und bei Beginn der Generalversammlung anwesend sind, stimmberechtigt.
-Während ordentlichen Mitgliedern, Ehrenmitgliedern und Ehrenobmännern bzw. Ehrenpräsidenten jeweils eine (1) Stimme zukommt, richtet sich die Anzahl der Stimmen von Kernmitgliedern gemäß § 7 Abs 2 – mit Ausnahme der in § 18 ausdrücklich geregelten Sonderfälle – nach der Höhe des Mitgliedsbeitrages.
+In der Generalversammlung sind nur ordentliche Mitglieder (nach der Maßgabe in § 7 Abs. 2), Ehrenmitglieder und Ehrenobmänner bzw. Ehrenpräsidenten, die bereits volljährig und bei Beginn der Generalversammlung anwesend sind, stimmberechtigt.
 
 (6)
 Natürliche Personen können sich in der Generalversammlung durch ein anderes Mitglied mittels schriftlicher Vollmacht vertreten lassen.
 Jedes stimmberechtigte Mitglied kann neben seiner eigenen Stimme maximal eine weitere Stimme im Wege einer schriftlichen Bevollmächtigung abgeben.
 
-(7)
-Juristische Personen werden durch eine vertretungsbefugte oder schriftlich bevollmächtigte natürliche Person vertreten, die selbst nicht Mitglied des Vereins sein muss.
-Eine derartige Vertretungsvollmacht muss dem Vorstand jedoch zumindest 3 (drei) Tage vor dem Termin der Generalversammlung nachweislich zugestellt worden sein, damit die stimmberechtigte, juristische Person rechtswirksam in der Generalversammlung vertreten werden kann.
-Eine Mehrfachvertretung von Mitgliedern durch einen Bevollmächtigten ist unzulässig.
+\subsection{§16 Qualifizierte Mehrheiten}
 
-(8)
-Für den Fall, dass zum Zeitpunkt einer Generalversammlung kein Kernmitglied existiert oder kein Kernmitglied persönlich anwesend bzw. ordnungsgemäß vertreten ist, können sämtliche Beschlüsse zur Tagesordnung von den anwesenden ordentlichen Mitgliedern (inkl. Ehrenmitgliedern und Ehrenobmännern bzw. Ehrenpräsidenten) mit den jeweils vorgesehenen Mehrheiten gefasst werden.
-Das Erfordernis von Doppelmehrheiten i.S.d. § 16 entfällt in diesen Fällen und unterbleibt selbstverständlich auch eine Stimmgewichtung.
-
-\subsection{§ 16
-Doppelte Mehrheiten}
-Nachfolgende Beschlüsse der Generalversammlung erfordern sowohl eine \textbf{einfache Mehrheit} der abgegebenen, gültigen Stimmen von \textbf{ordentlichen Mitgliedern} (inkl. Ehrenmitgliedern und Ehrenobmännern bzw. Ehrenpräsidenten) als auch eine \textbf{einfache Mehrheit} der abgegebenen, gültigen Stimmen von \textbf{Kernmitgliedern}:
-
-\begin{enumerate}[label=\alph*)]
-\item
-Genehmigung von Rechtsgeschäften zwischen Rechnungs- bzw. Abschlussprüfern und Verein;
-\item
-Beschluss über die Entlastung des Vorstands;
-\item
-Beschluss auf Erhöhung oder Herabsetzung der Höhe der Mitgliedsbeiträge für ordentliche Mitglieder, fördernde Mitglieder, Kinder- und Familienmitglieder;
-\item
-Beschlussfassung über sonstige von der Tagesordnung umfasste Anträge
-\end{enumerate}
-
-\subsection{§17 Qualifizierte Mehrheiten}
-
-(1)
-Nachfolgende Beschlüsse der Generalversammlung erfordern sowohl eine \textbf{qualifizierte Mehrheit von drei Vierteln} der abgegebenen, gültigen Stimmen von \textbf{ordentlichen Mitgliedern} (inkl. Ehrenmitgliedern und Ehrenobmännern bzw. Ehrenpräsidenten) als auch eine \textbf{qualifizierte Mehrheit von drei Vierteln} der abgegebenen, gültigen Stimmen von \textbf{Kernmitgliedern}:
+Nachfolgende Beschlüsse der Generalversammlung erfordern eine \textbf{qualifizierte Mehrheit von drei Vierteln} der abgegebenen, gültigen Stimmen von \textbf{ordentlichen Mitgliedern} (inkl. Ehrenmitgliedern und Ehrenobmännern bzw. Ehrenpräsidenten):
 
 \begin{enumerate}[label=\alph*)]
 \item
@@ -578,31 +522,10 @@ Beschluss über die freiwillige Auflösung des Vereins;
 \item
 Beschluss über die Enthebung des gesamten Vorstands, einzelner Vorstandsmitglieder, oder der Rechnungs- bzw. des Abschlussprüfers;
 \item
-Beschluss über die Herabsetzung des vereinbarten, jährlichen Mitgliedsbeitrages von Kernmitgliedern;
+Beschluss über die Aufnahme eines Antrags in die Tagesordnung einer Generalversammlung gem. § 13 Abs. 8 zweiter Satz;
 \end{enumerate}
 
-(2)
-Nachfolgender Beschluss der Generalversammlung erfordert eine \textbf{qualifizierte Mehrheit von drei Vierteln} (ohne Stimmgewichtung iSd. §18) der abgegebenen, gültigen Stimmen:
-
-Beschluss über die Aufnahme eines Antrags in die Tagesordnung einer Generalversammlung gem. § 13 Abs 8 zweiter Satz.
-
-\subsection{§ 18
-Ausnahmen von der Stimmgewichtung}
-
-Während sich die Anzahl der Stimmen von Kernmitgliedern gemäß § 7 Abs 2 bei Wahlen und Abstimmungen der Generalversammlung grundsätzlich nach der Höhe des Mitgliedsbeitrages richtet, hingegen ordentlichen Mitgliedern, Ehrenmitgliedern und Ehrenobmännern bzw. Ehrenpräsidenten jeweils nur eine (1) Stimme zukommt, gibt es in nachfolgenden Fällen (taxative Aufzählung) eine Ausnahme von dieser Stimmgewichtung, sodass in diesen Fällen auch Kernmitgliedern bei Abstimmungen nur eine (1) Stimme zukommt:
-
-\begin{enumerate}[label=\alph*)]
-\item
-Verleihung und Aberkennung der Ehrenmitgliedschaft sowie des Titels eines Ehrenobmanns bzw. Ehrenpräsidenten;
-\item
-Beschlussfassung über Einsprüche gegen die Ablehnung der Mitgliedschaft;
-\item
-Beschluss über die Aufnahme eines Antrags in die Tagesordnung einer Generalversammlung gem. § 13 Abs 8 zweiter Satz (qualifizierte Mehrheit iSd. § 17 Abs. 2 notwendig);
-\item
-Beschluss über einen Antrag auf geheime Abstimmung;
-\end{enumerate}
-
-\subsection{§ 19
+\subsection{§ 17
 Der Vorstand}
 
 (1)
@@ -613,7 +536,7 @@ Zu Vorstandsmitgliedern können nur natürliche Personen bestellt werden, die Ve
 Der Vorstand besteht aus mindestens 3 (drei) und höchstens 5 (fünf) Mitgliedern, und zwar namentlich aus dem Präsidenten, dem Vizepräsidenten und einem oder mehreren weiteren Vorstandsmitgliedern.
 
 (3)
-Scheidet der Präsident aus, so ist spätestens in der nächsten ordentlichen Generalversammlung ein neuer Vorstand mit neuer Funktionsperiode gemäß § 22 zu wählen.
+Scheidet der Präsident aus, so ist spätestens in der nächsten ordentlichen Generalversammlung ein neuer Vorstand mit neuer Funktionsperiode gemäß § 20 zu wählen.
 In diesem Fall haben die verbleibenden Vorstandsmitglieder aus ihren Reihen einen Interimspräsidenten zu wählen, der bis zur Neuwahl des Präsidenten im Amt bleibt.
 
 (4)
@@ -658,10 +581,10 @@ Den Vorsitz in den Vorstandssitzungen führt der Präsident, bei dessen Verhinde
 Ist auch dieser verhindert, obliegt der Vorsitz dem an Jahren ältesten, anwesenden Vorstandsmitglied oder jenem Vorstandsmitglied, das die übrigen Vorstandsmitglieder mehrheitlich dazu bestimmen.
 
 (14)
-Außer durch Tod und Ablauf der Funktionsperiode (Abs 6) erlischt die Funktion eines Vorstandsmitglieds durch Enthebung (Abs 15) durch die Generalversammlung und durch Rücktritt (Abs 16).
+Außer durch Tod und Ablauf der Funktionsperiode (Abs. 6) erlischt die Funktion eines Vorstandsmitglieds durch Enthebung (Abs. 15) durch die Generalversammlung und durch Rücktritt (Abs. 16).
 
 (15)
-Die Generalversammlung kann jederzeit den gesamten Vorstand oder einzelne seiner Mitglieder entheben, wobei derartige Beschlüsse eine qualifizierte Doppelmehrheit von drei Vierteln der abgegebenen, gültigen Stimmen gem. § 17 Abs 1 erfordern.
+Die Generalversammlung kann jederzeit den gesamten Vorstand oder einzelne seiner Mitglieder entheben, wobei derartige Beschlüsse eine qualifizierte Mehrheit gem. § 16 erfordern.
 Die Enthebung tritt mit Bestellung des neuen Vorstands bzw. Vorstandsmitglieds in Kraft.
 
 (16)
@@ -669,7 +592,7 @@ Die Vorstandsmitglieder können jederzeit schriftlich ihren Rücktritt erklären
 Die Rücktrittserklärung ist an den Vorstand, im Falle des Rücktritts des gesamten Vorstands an die Generalversammlung zu richten.
 Wird die Zahl von drei (3) Vorstandsmitgliedern unterschritten, ist der Rücktritt eines Vorstandsmitglieds aufschiebend bedingt bis zu einer Kooptierung oder bis zum Ablauf jener Generalversammlung wirksam, die über eine Neuwahl entscheidet.
 
-\subsection{§ 20
+\subsection{§ 18
 Aufgaben des Vorstands}
 
 (1)
@@ -707,7 +630,7 @@ Gründung (optional) und Bestellung des "`Wackeren"' Freundeskreises;
 (4)
 Zur Regelung der inneren Organisation (Einsetzung von Ausschüssen, Geschäftsführung, Clubmanagement, u.a.m.) kann vom Leitungsorgan unter Berücksichtigung dieser Statuten eine Geschäftsordnung beschlossen werden.
 
-\subsection{§ 21
+\subsection{§ 19
 Besondere Obliegenheiten einzelner Vorstandsmitglieder}
 
 (1)
@@ -733,12 +656,12 @@ Der Präsident führt den Vorsitz in den Generalversammlungen und in den Vorstan
 Er hat die Einhaltung der Statuten zu überwachen und für die ordnungsgemäße Durchführung der gefassten Beschlüsse zu sorgen.
 
 (6)
-Der Vorstand kann eine interne Geschäftsordnung beschließen und dabei einzelnen Vorstandsmitgliedern bestimmte Aufgaben (zB. Schriftführer, Finanzreferent, Rechtsreferent, usw.) zuweisen, für welche das jeweilige Vorstandsmitglied selbst verantwortlich zeichnet.
+Der Vorstand kann eine interne Geschäftsordnung beschließen und dabei einzelnen Vorstandsmitgliedern bestimmte Aufgaben (z.B. Schriftführer, Finanzreferent, Rechtsreferent, usw.) zuweisen, für welche das jeweilige Vorstandsmitglied selbst verantwortlich zeichnet.
 
 (7)
 Rechtsgeschäfte zwischen Vorstandsmitgliedern und dem Verein bedürfen der Zustimmung eines anderen Vorstandsmitglieds.
 
-\subsection{§ 22
+\subsection{§ 20
 Die Wahl des Vorstands}
 
 (1)
@@ -794,7 +717,7 @@ Erhält der Teamvorschlag nicht die erforderliche Mehrheit, so kann der bereits 
 	von seiner Wahl zurücktreten.
 	\end{itemize}
 \item
-Das Recht zur Änderung des Teamvorschlags gemäß § 22 Abs 3 lit c kann nur einmal in Anspruch genommen werden.
+Das Recht zur Änderung des Teamvorschlags gemäß § 20 Abs. 3 lit c kann nur einmal in Anspruch genommen werden.
 Führt das Wahlverfahren auf der Generalversammlung zu keinem Ergebnis, so ist jeder Rechnungsprüfer verpflichtet, unverzüglich eine außerordentliche Generalversammlung zum Zwecke der Wahl eines Vorstandes einzuberufen.
 Diese hat jedenfalls innerhalb einer Frist von 6 (sechs) Wochen stattzufinden.
 Das Wahlverfahren startet erneut.
@@ -802,7 +725,7 @@ Das Wahlverfahren startet erneut.
 Der amtierende Vorstand bleibt so lange im Amt, bis ein neuer Vorstand gewählt ist.
 \end{enumerate}
 
-\subsection{§ 23
+\subsection{§ 21
 Der "`Wackere"' Freundeskreis}
 
 (1)
@@ -824,7 +747,7 @@ Dessen Aufnahme in den Vorstand ohne Stimmrecht bedarf der Beschlussfassung durc
 Mindestens zweimal pro Jahr soll eine Sitzung des "`Wackeren"' Freundeskreises stattfinden.
 Zu diesen Sitzungen sind sämtliche Vorstandsmitglieder des Vereins zu laden, die berechtigt sind, an diesen Sitzungen ohne Stimmrecht teilzunehmen.
 
-\subsection{§ 24
+\subsection{§ 22
 Das Schiedsgericht}
 
 (1)
@@ -866,7 +789,7 @@ Nennt der Antragsgegner binnen einer Frist von 14 (vierzehn) Tagen nach Nennung 
 (8)
 Mitglieder, die sich in einer Streitigkeit aus dem Vereinsverhältnis nicht dem Schiedsgericht unterwerfen oder dessen Entscheidungen nicht anerkennen, können aus dem Verein ausgeschlossen werden.
 
-\subsection{§ 25
+\subsection{§ 23
 Die Rechnungsprüfer bzw. Abschlussprüfer}
 
 (1)
@@ -885,10 +808,10 @@ Die Rechnungsprüfer haben dem Vorstand über das Ergebnis der Prüfung zu beric
 
 (4)
 Rechtsgeschäfte zwischen Rechnungsprüfern und Verein bedürfen der Genehmigung durch die Generalversammlung.
-Im Übrigen gelten für die Rechnungsprüfer die Bestimmungen des § 19 Abs 14 bis 16 sinngemäß.
+Im Übrigen gelten für die Rechnungsprüfer die Bestimmungen des § 17 Abs. 14 bis 16 sinngemäß.
 
 (5)
-Erfüllt der Verein die Voraussetzung des § 22 Abs 2 Vereinsgesetz 2002, so gelten die Bestimmungen über die Rechnungsprüfer sinngemäß für den Abschlussprüfer.
+Erfüllt der Verein die Voraussetzung des § 22 Abs. 2 Vereinsgesetz 2002, so gelten die Bestimmungen über die Rechnungsprüfer sinngemäß für den Abschlussprüfer.
 
 (6)
 Besteht gemäß § 22 Abs. 2 Vereinsgesetz die gesetzliche Verpflichtung zur Abschlussprüfung, so übernimmt der Abschlussprüfer zwingend die Aufgaben der Rechnungsprüfer.
@@ -897,11 +820,11 @@ Dies gilt auch dann, wenn eine Abschlussprüfung freiwillig im Umfang des § 22 
 
 \section{IV. SCHLUSSBESTIMMUNGEN}
 
-\subsection{§ 26
+\subsection{§ 24
 Freiwillige Auflösung des Vereins}
 
 (1)
-Die freiwillige Auflösung des Vereines kann nur in einer Generalversammlung und nur mit einer qualifizierten Doppelmehrheit von drei Vierteln der abgegebenen, gültigen Stimmen gem. § 17 Abs 1 beschlossen werden.
+Die freiwillige Auflösung des Vereines kann nur in einer Generalversammlung und nur mit einer qualifizierten Mehrheit gem. § 16 beschlossen werden.
 
 (2)
 Diese Generalversammlung hat auch – sofern Vereinsvermögen vorhanden ist – über die Abwicklung zu beschließen.
@@ -913,15 +836,15 @@ Der Verein hat der Vereinsbehörde das Datum der freiwilligen Auflösung und, fa
 (4)
 Bei Auflösung des Vereins oder bei Wegfall des bisherigen begünstigten Vereinszwecks darf das allenfalls vorhandene Vereinsvermögen in keiner wie immer gearteten Form den Vereinsmitgliedern zugutekommen, sondern ist für sportliche gemeinnützige Zwecke im Sinne der §§ 34ff BAO zu verwenden.
 
-\subsection{§ 27
+\subsection{§ 25
 Geschlechtsspezifische Bezeichnungen}
 
 Alle Personenbezeichnungen, die in diesen Vereinsstatuten in der männlichen Form verwendet werden, gelten sinngemäß auch für die weibliche Form.
 Werden Funktionen von Frauen ausgeübt, so wird die weibliche Form der Bezeichnung verwendet.
 
-\subsection{§ 28
+\subsection{§ 26
 Inkrafttreten}
 
-Die vorliegenden Statuten treten unmittelbar nach Beschlussfassung durch die Generalversammlung am 19.01.2020 in Kraft und werden damit alle früheren Vereinsstatuten aufgehoben.
+Die vorliegenden Statuten treten unmittelbar nach Beschlussfassung durch die Generalversammlung am XX.XX.2022 in Kraft und werden damit alle früheren Vereinsstatuten aufgehoben.
 
 \end{document}
